# event-factor-bench

./: .gitignore  BENCHMARK_CARD.md  CITATION.cff  CLAIM_GATE.md  LICENSE  Makefile  README.md  RESULTS.md  SHA256SUMS  THIRD_PARTY.md  pyproject.toml
.github/workflows/: ci.yml
audits/: development_precommit_v0.1.json  formal_freeze_failures_v0.1.json
configs/: protocol_v0.1.json
results/gamma_snapshot_v0.2/: holdout_metrics.csv  results.json
scripts/: audit_local_snapshot.py  collect_frozen.py  compare_collectors.py  evaluate_api_snapshot.py  evaluate_frozen.py  render_results.py  verify_chain.py
src/event_factor_bench/: __init__.py  bootstrap.py  calibration.py  evaluation.py  history.py  leakage.py  metrics.py  projection.py  thresholds.py
tests/: test_api_snapshot.py  test_audit_local_snapshot.py  test_bootstrap.py  test_calibration.py  test_chain_resolution.py  test_collection.py  test_compare_collectors.py  test_evaluation.py  test_evaluation_failclosed.py  test_history.py  test_leakage.py  test_metrics.py  test_projection.py  test_render_results.py  test_thresholds.py
